fix(scrollbar): 修复showType为hover且使用useScrollbar时，hover不显示滚动条问题

--- a/packages/opendesign/src/scrollbar/style/index.scss
+++ b/packages/opendesign/src/scrollbar/style/index.scss
@@ -16,21 +16,21 @@
     opacity: 1;
   }
 
-  &.o-scrollbar-show-x {
+  &.o-scrollbar-visible-x {
     > .o-scrollbar-x {
       opacity: 1;
       pointer-events: auto;
     }
   }
 
-  &.o-scrollbar-show-y {
+  &.o-scrollbar-visible-y {
     > .o-scrollbar-y {
       opacity: 1;
       pointer-events: auto;
     }
   }
 
-  &.o-scrollbar-show {
+  &.o-scrollbar-visible {
     .o-scrollbar-rail {
       opacity: 1;
       pointer-events: auto;
